# cppintrinsics

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  cppintrinsics-config.cmake
cmake/: CheckIntrinsics.cmake
source/: CMakeLists.txt
source/AVX/: CMakeLists.txt
source/AVX2/: CMakeLists.txt
source/AVX512/: CMakeLists.txt
source/SSE/: CMakeLists.txt
